--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
              <div class="col-lg-5  order-lg-2 order-1 mt-lg-0 mt-3"  data-aos="fade-up" data-aos-duration="300" date-aos-delay="400"
              data-aos-easing="ease-in-out">
                 <div class="about-img w-100  ">
-                    <img src="assets/images/about-us-img.jpg" alt="" class="w-100 rounded shadow">
+                    <img src="assets/images/about-us-img.JPG" alt="" class="w-100 rounded shadow">
                 </div>
              </div>
             </div>
